--- a/layouts/shortcodes/bluebox.html
+++ b/layouts/shortcodes/bluebox.html
@@ -1,3 +1,3 @@
-<p style="padding: 1rem; font-size: 1.1rem; background-color: #DBE8FE;">
+<p style="padding: 1rem; background-color: #DBE8FE;">
     {{ .Inner | markdownify  }}
 </p>
