--- a/layouts/shortcodes/pinkbox.html
+++ b/layouts/shortcodes/pinkbox.html
@@ -1,3 +1,3 @@
-<p style="text-align: center; margin: auto; border: #DBE8FE 3px solid; padding: 1rem; font-size: 1.2rem;">
+<p style="text-align: center; margin: auto; border: #DBE8FE 3px solid; padding: 1rem;">
     {{ .Inner | markdownify  }}
 </p>
